[package]
name    = "iron-vault"
version = "0.1.0"
authors = ["Noah Callaway <noah@apsis.io>"]

[lib]
name = "vault_core"
path = "src/core/core.rs"

[[bin]]
name = "iv"
path = "src/cli/cli.rs"

[dependencies]
ring = "0.7.1" # Used for core crypto
odds = "0.2.25" # Used for Vector Extensions
stainless = "*" # Used for unit testing
